config/k8s/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.3
        ports:
        - containerPort: 5433
          protocol: TCP 
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
        - name: migrations
          mountPath: /docker-entrypoint-initdb.d
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 8Gi
      storageClassName: standard
  - metadata:
      name: migrations
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 600Mi
      storageClassName: standard
