config/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-for-stt-service
spec:
  selector:
    app: auth-for-stt
  ports:
    - protocol: TCP
      port: 11011
      targetPort: 11011
