config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-for-stt-ingress
spec:
  rules:
  - host: auth-for-stt.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: auth-for-stt-service
            port:
              number: 11011
